// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WarningIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-WarningIcon"
  isBadge={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    className="lucid-WarningIcon-triangle"
    d="M8.011,0 C7.379,0 6.747,0.457 6.268,1.369 C5.242,3.321 0.864,11.832 0.419,12.681 C-0.54,14.503 0.228,15.999 2.124,15.999 C3.186,15.999 10.737,15.999 13.877,15.999 C15.773,15.999 16.541,14.506 15.584,12.681 C13.209,8.156 12.127,5.892 9.755,1.369 C9.273,0.458 8.641,0 8.011,0 L8.011,0 z"
  />
  <rect
    className="lucid-WarningIcon-mark"
    height="7"
    width="2"
    x="7"
    y="4"
  />
  <rect
    className="lucid-WarningIcon-mark"
    height="2"
    width="2"
    x="7"
    y="12"
  />
</Icon>
`;

exports[`WarningIcon [common] example testing should match snapshot(s) for 2.clickable 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-WarningIcon lucid-WarningIcon-is-clickable"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    className="lucid-WarningIcon-triangle"
    d="M8.011,0 C7.379,0 6.747,0.457 6.268,1.369 C5.242,3.321 0.864,11.832 0.419,12.681 C-0.54,14.503 0.228,15.999 2.124,15.999 C3.186,15.999 10.737,15.999 13.877,15.999 C15.773,15.999 16.541,14.506 15.584,12.681 C13.209,8.156 12.127,5.892 9.755,1.369 C9.273,0.458 8.641,0 8.011,0 L8.011,0 z"
  />
  <rect
    className="lucid-WarningIcon-mark"
    height="7"
    width="2"
    x="7"
    y="4"
  />
  <rect
    className="lucid-WarningIcon-mark"
    height="2"
    width="2"
    x="7"
    y="12"
  />
</Icon>
`;

exports[`WarningIcon [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-WarningIcon"
  isBadge={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    className="lucid-WarningIcon-triangle lucid-WarningIcon-triangle-is-disabled"
    d="M8.011,0 C7.379,0 6.747,0.457 6.268,1.369 C5.242,3.321 0.864,11.832 0.419,12.681 C-0.54,14.503 0.228,15.999 2.124,15.999 C3.186,15.999 10.737,15.999 13.877,15.999 C15.773,15.999 16.541,14.506 15.584,12.681 C13.209,8.156 12.127,5.892 9.755,1.369 C9.273,0.458 8.641,0 8.011,0 L8.011,0 z"
  />
  <rect
    className="lucid-WarningIcon-mark"
    height="7"
    width="2"
    x="7"
    y="4"
  />
  <rect
    className="lucid-WarningIcon-mark"
    height="2"
    width="2"
    x="7"
    y="12"
  />
</Icon>
`;
